=== Opus Primus changelog.txt ===
Last revised March 20, 2013
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.1.1 ==
* Released ...

= CSS =
* Removed unused element for non-existent 'comments-toggle' script

= Miscellaneous =
* Code clean-up

/** ------------------------------------------------------------------------- */
== Version 1.1 ==
* Released March 2013

= Code =
* Added `excerpt_more_link` and attached to `excerpt_more` filter
* Added `anchor_title_text` for use with `excerpt_more_link` and permalink in the post meta details
* Added additional list wrapper around each comment type
* Added Breadcrumbs trails to pages and posts
* Added Comment Tabs for each type (Comment, Pingback, and Trackback)
* Created and enqueued 'opus-primus-comment-tabs.js'
* Created Header class
* Drop `restore_image_title` filter hook into `media_send_to_editor` as potentially blocking insertion of media
* Fixed comments (only) count output
* Limit width generated by "Full Size Video" JavaScript to a maximum of 1000px
* Refactored Structures class to put `site_title`, `site_description`, and `custom_header_image` into Header class
* Refactored `opus-primus-header` to reflect class/method changes of Structures and Header

= CSS =
* Added classes to `h2`, `ul`, and `li` elements in `OpusPrimusAuthors::author_details`
* Add minor comments styles
* Center content of Post Format: Video posts.

= Miscellaneous =
* Removed unused style sheet 'opus-primus-responsive-layout.css'

/** ------------------------------------------------------------------------- */
== Version 1.0.4 ==
* Released March 2013

= Code =
* Added 'Breadcrumbs' class
* Fixed problem with wrong loop method call in 'archive.php'
* Moved `breadcrumbs` method from 'Structures' class to 'Breadcrumbs' class
* Removed `hgroup` container from 'opus-primus-header'

= CSS =
* Added Breadcrumbs section
* Code formatting
