@@ -51,6 +51,8 @@
  *
  * @version 1.1.1
  * @date    March 20, 2013
+ * Add rounded corners for the comment type tabs and the comments panel
+ * Add `#d3d3d3` color as default tab background color; active is transparent
  * Removed unused element for non-existent 'comments-toggle' script
  */
 
@@ -998,10 +1000,30 @@ div.comments-wrapper ul.comments-list li.comment {
     border-bottom: none;
 }
 
+.ui-state-default {
+    background-color: #d3d3d3;
+}
+
+.ui-state-active {
+    background-color: transparent;
+}
+
 .ui-tabs-panel {
     clear: left;
     border: 1px solid #999;
     padding: 10px 10px 0;
+}
+
+/** Add rounded corners for the comment type tabs and the comments panel */
+.ui-tabs-nav a {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+.ui-tabs-panel {
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-right-radius: 5px;
 }
 /** End: Comment Tabs ------------------------------------------------------- */
 
