@@ -6,6 +6,8 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Released ...
 
 = CSS =
+* Add rounded corners for the comment type tabs and the comments panel
+* Add `#d3d3d3` color as default tab background color; active is transparent
 * Removed unused element for non-existent 'comments-toggle' script
 
 = Miscellaneous =
